--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/glog"]
 	path = vendor/glog
 	url = https://github.com/google/glog
+[submodule "vendor/drogon"]
+	path = vendor/drogon
+	url = https://github.com/drogonframework/drogon
