Changes for drogon Added drogon dependencies in vcpkg.json Modified cmakelists.txt modified .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,13 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 include_directories(include)
 
 file(GLOB SOURCES src/*.cpp src/api/*.cpp)
-file(GLOB HEADERS include/*.hpp nclude/api/*.hpp)
+file(GLOB HEADERS include/*.hpp include/api/*.hpp)
 
 set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(vendor/nanodbc)
 add_subdirectory(vendor/glog)
+add_subdirectory(vendor/drogon)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE nanodbc glog)
+target_link_libraries(${PROJECT_NAME} PRIVATE nanodbc glog drogon)
