--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 
 include_directories(include)
-
+	
 file(GLOB SOURCES src/*.cpp src/api/*.cpp)
 file(GLOB HEADERS include/*.hpp include/api/*.hpp)
 
@@ -19,3 +19,5 @@ add_subdirectory(vendor/drogon)
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE nanodbc glog drogon)
+
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
